# styro

./: README.md  TEST_DOCUMENTATION.md  install.sh  pyproject.toml  styro.py  test_cli_integration.py  test_integration_mocks.py  test_mock_packages.py  test_runner.py  test_status_rich.py  test_styro.py
.github/workflows/: binaries.yml  ci.yml  docker.yml  pypi-publish.yml
src/styro/: __main__.py  _git.py  _packages.py  _self.py  _status.py  _subprocess.py
styro/: __init__.py  __main__.py  _git.py  _openfoam.py  _packages.py  _self.py  _status.py  _subprocess.py  _util.py
