[build-system]
requires = ["uv_build>=0.9,<0.10"]
build-backend = "uv_build"

[project]
name = "styro"
version = "0.1.31"
license = "GPL-3.0-only"
description = "Package manager for OpenFOAM"
readme = "README.md"
requires-python = ">=3.9"
authors = [{name = "Gabriel S. Gerlero", email = "ggerlero@cimec.unl.edu.ar"}]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Framework :: AsyncIO",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering",
    "Topic :: System :: Installation/Setup",
    "Topic :: System :: Software Distribution",
    "Typing :: Typed",
]
dependencies = [
    "aiohttp>=3,<4",
    "cyclopts>=3.24,<5",
    "typing_extensions>=4,<5; python_version < '3.11'",
]

[project.urls]
Homepage = "https://github.com/gerlero/styro"
Repository = "https://github.com/gerlero/styro"

[project.scripts]
styro = "styro.__main__:app"

[dependency-groups]
dev = [
    "pyinstaller>=5,<7",
    "pytest>=8,<10",
    "pytest-cov",
    "ruff",
    "ty",
]

[tool.ruff.lint]
extend-select = ["ALL"]
extend-ignore = [
    "C901",
    "COM812",
    "D",
    "E501",
    "PLR0912",
    "PLR0915",
    "S101",
    "T201",
]
